<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/login_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginActivity"
    >


    <ProgressBar
        android:id="@+id/login_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_title"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_icon"
        android:layout_marginTop="120dp"
        android:layout_marginStart="5dp"
        android:textSize="30sp"
        android:textColor="@color/colorTheme"
        android:text="@string/welcome_title"
        />

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/login_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="34dp"
        android:contentDescription="@string/cd_welcome"
        android:src="@drawable/ic_icon_24dp"
        android:transitionName="splashSharedIcon"
        />



    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/login_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginTop="190dp"
        android:textSize="18sp"
        android:autofillHints="id"
        tools:targetApi="O"
        android:inputType="textEmailAddress"
        android:hint="@string/hint1"
        app:met_floatingLabelText="@string/hint1"
        app:met_underlineColor="@color/colorTheme"
        app:met_primaryColor="@color/colorTheme"
        app:met_textColorHint="@color/colorTextHint"
        app:met_textColor="@color/colorText"
        app:met_floatingLabel="highlight"
        app:met_validateOnFocusLost="true"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintTop_toBottomOf="@id/login_id"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:autofillHints="password"
        tools:targetApi="O"
        android:inputType="textPassword"
        android:hint="@string/hint2"
        app:met_underlineColor="@color/colorTheme"
        app:met_primaryColor="@color/colorTheme"
        app:met_textColorHint="@color/colorTextHint"
        app:met_textColor="@color/colorText"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/hint2"
        app:met_clearButton="true"
        />

    <Button
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:text="@string/login"
        android:background="@drawable/bg_8dp_solid_theme"
        android:enabled="false"
        />

    <TextView
        android:id="@+id/login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_login"
        app:layout_constraintEnd_toEndOf="@id/login_login"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/register"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/login_third_party_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_login"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginStart="34dp"
        android:text="@string/third_party"
        android:textSize="14sp"
        />

    <ImageView
        android:id="@+id/login_wechat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/login_third_party_title"
        app:layout_constraintTop_toBottomOf="@id/login_third_party_title"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/cd_wechat"
        android:src="@drawable/ic_wechat_24dp"
        android:tint="@color/icon95_selector"
        android:clickable="true"
        android:focusable="true"
        />

    <ImageView
        android:id="@+id/login_qq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/login_wechat"
        app:layout_constraintTop_toBottomOf="@id/login_third_party_title"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/cd_qq"
        android:src="@drawable/ic_qq_24dp"
        android:tint="@color/icon95_selector"
        android:clickable="true"
        android:focusable="true"
        />

    <ImageView
        android:id="@+id/login_weibo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/login_qq"
        app:layout_constraintTop_toBottomOf="@id/login_third_party_title"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/cd_weibo"
        android:src="@drawable/ic_weibo_24dp"
        android:tint="@color/icon95_selector"
        android:clickable="true"
        android:focusable="true"
        />


</androidx.constraintlayout.widget.ConstraintLayout>