<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.batch.BatchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/batch_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_return_24dp"
        app:title="@string/batch_title"
        android:elevation="5dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/batch_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/batch_toolbar"
        app:layout_constraintBottom_toTopOf="@id/batch_bottom"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/batch_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/batch_moveTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:textColor="@color/colorTheme"
            android:textSize="16sp"
            android:text="@string/move_to"
            />

        <TextView
            android:id="@+id/batch_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorTheme"
            android:textSize="16sp"
            android:text="@string/delete"/>

        <TextView
            android:id="@+id/batch_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"
            android:textColor="@color/colorTheme"
            android:textSize="16sp"
            android:text="@string/export"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>