<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   tools:context=".ui.newItem.NewItemFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/newItem_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/newItem_ok"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/cd_close"
            android:layout_gravity="start|top"
            android:layout_marginTop="13dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_ok_24dp"
            android:tint="@color/newItemDark"
            />

        <ImageView
            android:id="@+id/newItem_cancel"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/cd_confirm"
            android:layout_gravity="end|top"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="16dp"
            android:tint="@color/newItemDark"
            android:src="@drawable/ic_cancel"
            />

        <TextView
            android:id="@+id/newItem_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="11dp"
            android:text="@string/income"
            android:layout_marginEnd="22dp"
            android:textColor="@color/newItemDark"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/newItem_expenditure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="11dp"
            android:text="@string/expenditure"
            android:textColor="@color/colorTheme"
            android:textSize="18sp"
            />

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/newItem_money_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/newItem_toolbar"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/newItem_icon"
                android:layout_width="42dp"
                android:layout_height="42dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/cd_icon"
                android:layout_marginStart="16dp"
                android:scaleType="center"
                android:src="@drawable/ic_menu_black_24dp"
                android:backgroundTint="@color/colorTheme"
                android:background="@drawable/circle_bg"
                android:tint="@color/white"
                />

            <TextView
                android:id="@+id/newItem_bigKind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/newItem_icon"
                android:layout_marginStart="8dp"
                android:textColor="@color/newItemText"
                android:textSize="20sp"
                android:text="通用"
                />

            <TextView
                android:id="@+id/newItem_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/newItem_currency_symbol"
                android:layout_marginEnd="3dp"
                android:textSize="20sp"
                android:text="0"
                />

            <TextView
                android:id="@+id/newItem_currency_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/newItem_money"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:textSize="12sp"
                android:text="@string/cur_cny"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/newItem_kind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/newItem_money_card"
        android:layout_marginTop="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/newItem_bottom"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/newItem_remarks"
            android:layout_width="63dp"
            android:layout_height="22dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/remarks"
            android:textSize="14sp"
            android:textColor="@color/colorText"
            android:background="@drawable/bg_22dp_round_strock_theme"
            />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newItem_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        >



        <ImageView
            android:id="@+id/newItem_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_calendar_20dp"
            android:tint="@color/colorIcon95"
            android:contentDescription="@string/cd_calendar"
            />

        <EditText
            android:id="@+id/newItem_money_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/newItem_calendar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_money"
            android:inputType="numberDecimal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/colorTheme"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>