<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   tools:context=".ui.itemMore.ItemMoreFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/itemMore_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        app:navigationIcon="@drawable/ic_return_24dp"
        android:elevation="5dp"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/itemMore_remarks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/itemMore_toolbar"
        app:layout_constraintBottom_toTopOf="@id/itemMore_bottom"
        app:met_hideUnderline="true"
        android:inputType="textMultiLine"
        app:met_maxCharacters="200"
        android:hint="@string/hint8"
        android:gravity="top|start"
        android:textSize="14sp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemMore_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ImageView
            android:id="@+id/itemMore_cam"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_cam"
            android:contentDescription="@string/cd_cam"
            />

        <Button
            android:id="@+id/itemMore_confirm"
            android:layout_width="91dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorTheme"
            android:textColor="@color/white"
            android:text="@string/cd_confirm"
            android:textSize="20sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>